--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,16 @@ footer .footer-content {
 	font-size: 16px;
 }
 
+footer .footer-content a {
+	text-decoration: none;
+	color: rgba(250, 250, 250, 0.7);
+	font-size: 16px;
+}
+
+footer .footer-content a:hover {
+	color: #fcdb00;
+}
+
 footer ul {
 	list-style: none;
 }
