--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ header .logo {
 	margin-top: 60px;
 }
 
+header button.navbar-toggle {
+	margin-top: 50px;
+}
+
 header nav {
 	float: right;
 	margin-top: 75px;
@@ -75,7 +79,15 @@ header nav ul li a:hover {
 .yellow-block .content a {
 	color:  #010101;
 	font-size: 42px;
-	padding-right: 38px;
+	margin-right: 38px;
+}
+
+.yellow-block .content a:hover {
+	color: #fff;
+}
+
+.yellow-block .content a:last-child {
+	margin: 0;
 }
 
 .yellow-block .device {
@@ -100,7 +112,7 @@ header nav ul li a:hover {
 	margin-bottom: 17px;
 }
 .white-block h6 {
-	margin: 91px;
+	margin: 91px 0;
 }
 
 .col-md-4 {
@@ -186,6 +198,15 @@ header nav ul li a:hover {
 	margin-right: 33px;
 }
 
+.dark-block .social a img {
+	border: 2px solid rgba(250, 250, 250, 0.0);
+	border-radius: 10px;
+}
+
+.dark-block .social a:hover img {
+	border: 2px solid rgba(250, 250, 250, 0.9);
+}
+
 .dark-block .social a:last-child {
 	margin-right: 0;
 }
@@ -213,3 +234,36 @@ footer .footer-content a:hover {
 footer ul {
 	list-style: none;
 }
+
+@media screen and (max-width: 1200px) {
+	.dark-block p, .dark-block ul li a {
+		font-size: 20px;
+	}
+
+	.dark-block .footer-content .contacts {
+		margin-bottom: 30px;
+	}
+
+	.dark-block .footer-content .contacts p:last-child {
+		border-bottom: 2px solid rgba(250, 250, 250, 0.5);
+		padding-bottom: 40px;
+	}
+}
+
+
+@media screen and (max-width: 992px) {
+	.content,  .device, .dark-block form  {
+		text-align: center;
+	}
+
+	.device img {
+		display: inline-block;
+	}
+
+
+	.dark-block input {
+		margin: 0 0 30px;
+		width: 100%;
+	}
+}
+
